--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,28 @@ _ReSharper*/
 [Tt]est[Rr]esult
 [Bb]uild[Ll]og.*
 *.swp
+*.userprefs
+*.obj
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*.pidb
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.scc
+*.[Rr]e[Ss]harper
+*.zip
+*.[Pp]ublish.xml
